# PhysX-thing

./: README.md  buildnativelocal.cmd  cmake_generate_projects.py  vc16win64.xml
src/PhysXNative/: CMakeLists.txt  PhysXNative.cpp
